# spatz

./: .editorconfig  .gitignore  .gitmodules  Bender.local  Bender.yml  Bender.yml_bak  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  HP_DQMATMUL_VLXBLK_NOTES.md  Makefile  Memora.yml  README.md  requirements.txt
hw/system/spatz_cluster/sw/: CMakeLists.txt
sw/Non-Linear/power/fp16/: CMakeLists.txt  cos_hw.c  cosh_sw.c  exp_hw.c  log_hw.c  log_sw.c  sin_hw.c  sin_sw.c  tanh_hw.c  tanh_sw.c
sw/Non-Linear/power/fp32/: CMakeLists.txt  cosh_hw.c  cosh_sw.c  exp_sw.c  log_hw.c  log_sw.c  rsqrt_hw.c  sanity_check.h  sin_hw.c  sin_sw.c  tanh_hw.c
sw/Non-Linear/test_kernels/: CMakeLists.txt
sw/Non-Linear/test_kernels/01_RoPE/: baseline_function.c  custom_function.c
sw/Non-Linear/test_kernels/01_RoPE_bf16/: custom_function.c
sw/Non-Linear/test_kernels/01_RoPE_fp16/: custom_function.c
sw/Non-Linear/test_kernels/02_Mish/: baseline_function.c
sw/Non-Linear/test_kernels/02_Mish_bf16/: baseline_function.c  custom_function.c
sw/Non-Linear/test_kernels/02_Mish_fp16/: custom_function.c
sw/Non-Linear/test_kernels/03_Stable_Softmax/: baseline_function.c  custom_function.c
sw/Non-Linear/test_kernels/03_Stable_Softmax_bf16/: custom_function.c
sw/chainingTest/: CMakeLists.txt  test1.c
sw/non-linearities/: CMakeLists.txt  FP16_README.md
sw/non-linearities/FP32/rec/: rec.c
sw/quadrilateroBenchmarks/: CMakeLists.txt
sw/quadrilateroBenchmarks/include/: matmul.h  quadrilatero.h
sw/quadrilateroBenchmarks/kernels/: matmul.c
sw/quadrilateroBenchmarks/quadrilatero_matmul/: gen_stimuly.py  gen_stimuly_fp32.py  gen_stimuly_int16.py  gen_stimuly_int32.py  gen_stimuly_int8.py  main.c  matrixMul16i.h  matrixMul32.h  matrixMul32b.h  matrixMul32f.h  matrixMul32i.h  matrixMul8i.h
sw/quadrilateroBenchmarks/scripts/: dataMatMul.py
sw/quadrilateroBenchmarks/sp-fmatmul/: main.c
sw/quadrilateroBenchmarks/sp-fmatmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/sp-matmul/: main.c
sw/quadrilateroBenchmarks/sp-matmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/sp-umatmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/verify-quadrilatero/: main.c
sw/quadrilateroBenchmarks/widening2x-hp-altfmatmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/widening2x-hp-fmatmul/: main.c
sw/quadrilateroBenchmarks/widening2x-hp-fmatmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/widening2x-hp-matmul/: main.c
sw/quadrilateroBenchmarks/widening2x-hp-matmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/widening2x-hp-umatmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/widening4x-bp-altfmatmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/widening4x-bp-fmatmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/widening4x-bp-matmul/: main.c
sw/quadrilateroBenchmarks/widening4x-bp-matmul-quadrilatero/: main.c
sw/quadrilateroBenchmarks/widening4x-bp-umatmul-quadrilatero/: main.c
sw/redundancy_modules/: CMakeLists.txt  main.c  main.c_full_buggy
sw/redundancy_modules/include/: redundancy_modules.c  redundancy_modules.h
sw/riscvTests/: CMakeLists.txt
sw/sensorFusion/: CMakeLists.txt  main.c  mypf.c  rf_model.h
sw/sensorFusion/data/: data.h
sw/spatzBenchmarks/: .gitignore  CMakeLists.txt
sw/spatzBenchmarks/benchmark/: benchmark.c
sw/spatzBenchmarks/dp-db-fdotp/: main.c
sw/spatzBenchmarks/dp-db-fft/: main.c
sw/spatzBenchmarks/dp-db-fmatmul-4x4vl/: main.c
sw/spatzBenchmarks/dp-faxpy/: main.c
sw/spatzBenchmarks/dp-faxpy-cache/: main.c
sw/spatzBenchmarks/dp-fconv2d/: main.c
sw/spatzBenchmarks/dp-fdotp/: main.c
sw/spatzBenchmarks/dp-fft/: main.c
sw/spatzBenchmarks/dp-fft-cache/: main.c
sw/spatzBenchmarks/dp-fmatmul/: main.c
sw/spatzBenchmarks/dp-fmatmul-4x4vl/: main.c
sw/spatzBenchmarks/dp-fmatmul-8x2vl/: main.c
sw/spatzBenchmarks/dp-fmxu-toy/: main.c
sw/spatzBenchmarks/dp-mxfmatmul/: main.c
sw/spatzBenchmarks/dp-mxfmatmul-m4n4k4-b2/: main.c
sw/spatzBenchmarks/dp-mxfmatmul-m4n4k4-b4/: main.c
sw/spatzBenchmarks/dp-mxfmatmul-m4n4k8-b2/: main.c
sw/spatzBenchmarks/dp-mxfmatmul-m4n4k8-b4/: main.c
sw/spatzBenchmarks/dp-mxfmatmul-m8n4k4-b2/: main.c
sw/spatzBenchmarks/dp-mxfmatmul-m8n4k4-b4/: main.c
sw/spatzBenchmarks/fconv2d/: main.c
sw/spatzBenchmarks/fdotp/: main.c
sw/spatzBenchmarks/gemv/: main.c
sw/spatzBenchmarks/gemv-col/: main.c
sw/spatzBenchmarks/hp-alt-fmatmul/: main.c
sw/spatzBenchmarks/hp-dqmatmul/: main.c
sw/spatzBenchmarks/hp-fmatmul/: main.c
sw/spatzBenchmarks/include/: benchmark.h
sw/spatzBenchmarks/instr_power/: main.c
sw/spatzBenchmarks/jacobi2d/: main.c
sw/spatzBenchmarks/linked-list/: main.c
sw/spatzBenchmarks/mxfp4/: mx_layer.h
sw/spatzBenchmarks/mxfp8/: mx_layer.h
sw/spatzBenchmarks/mxfp8-dotp/: main.c
sw/spatzBenchmarks/mxfp8-matmul/: main.c
sw/spatzBenchmarks/mxfp8-matvec/: main.c
sw/spatzBenchmarks/mxfp8-ww-synthetic/: main.c
sw/spatzBenchmarks/mxu-toy/: main.c
sw/spatzBenchmarks/omptarget/: main.c  sw_mailbox.c  sw_mailbox.h
sw/spatzBenchmarks/post-increment/: main.c
sw/spatzBenchmarks/rs_spmm/: main.c
sw/spatzBenchmarks/rs_spmv/: main.c
sw/spatzBenchmarks/sa-gemv/: main.c
sw/spatzBenchmarks/sa_gemv/: main.c
sw/spatzBenchmarks/sdotp-bp-fmatmul/: main.c
sw/spatzBenchmarks/sdotp-hp-fmatmul/: main.c
sw/spatzBenchmarks/sp-SpMM/: main.c
sw/spatzBenchmarks/sp-SpMV/: main.c
sw/spatzBenchmarks/sp-fdotp/: main.c
sw/spatzBenchmarks/sp-fft/: README.md  main.c
sw/spatzBenchmarks/sp-fmatmul/: main.c
sw/spatzBenchmarks/sp-fmatmul-post-increment/: main.c
sw/spatzBenchmarks/spmm_sparse/: KERNEL_SUMMARY.md  README.md  main.c
sw/spatzBenchmarks/spmv/: main.c  prompt.md
sw/spatzBenchmarks/spmv_sparse/: README.md  main.c  prompt.md
sw/spatzBenchmarks/widening-bp-fmatmul/: main.c
sw/spatzBenchmarks/widening-hp-fmatmul/: main.c
sw/vme/: CMakeLists.txt
sw/vme/apps/: CMakeLists.txt
sw/vme/benchmarks/: CMakeLists.txt
sw/vme/isaTests/: CMakeLists.txt  msetmtype.c  msetmtypei.c  msettk.c  msettm.c  msettn.c  vtfmm.c  vtle.c  vtmm.c  vtmv.c  vtse.c  vtzero.c
(+1661 files in other folders)
